[gd_scene load_steps=12 format=2]

[ext_resource path="res://font/Franchise.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scrips/Interfaz.gd" type="Script" id=2]
[ext_resource path="res://Graphics/GUI/logo_large_color_light.png" type="Texture" id=3]
[ext_resource path="res://Graphics/GUI/Inventores.png" type="Texture" id=4]
[ext_resource path="res://Graphics/GUI/Portada.jpg" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 400
outline_size = 12
outline_color = Color( 0.298039, 0.592157, 0.239216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 283
outline_size = 45
outline_color = Color( 0.0117647, 0.396078, 0.67451, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://font/Franchise.ttf"

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 10
outline_color = Color( 0.360784, 0.298039, 0.298039, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://font/Franchise.ttf"

[sub_resource type="DynamicFont" id=6]
size = 100
outline_size = 12
outline_color = Color( 0.129412, 0.101961, 0.631373, 1 )
font_data = SubResource( 5 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -385.0
margin_top = -235.0
margin_right = 1381.0
margin_bottom = 2270.0

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.0
margin_top = 1.0
margin_right = 1080.0
margin_bottom = 1920.0
texture = ExtResource( 5 )
expand = true

[node name="Mensaje" type="Label" parent="."]
visible = false
anchor_left = 0.697
anchor_top = 0.5
anchor_right = 0.838
anchor_bottom = 0.5
margin_left = -602.76
margin_top = -884.0
margin_right = 246.96
margin_bottom = -81.0
rect_scale = Vector2( 0.8, 0.8 )
custom_colors/font_color = Color( 0.270588, 0.203922, 0.203922, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Energy
tycoon"
align = 1
valign = 1

[node name="Iniciar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = 350.0
margin_right = 492.0
margin_bottom = 640.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = SubResource( 2 )
text = "Iniciar"

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 154, 1790 )
rotation = -3.13636
scale = Vector2( -0.5, -0.5 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 688, 1794 )
scale = Vector2( 0.313265, 0.257813 )
texture = ExtResource( 3 )

[node name="UserName" type="LineEdit" parent="."]
anchor_right = 0.235
anchor_bottom = 0.012
margin_left = 197.0
margin_top = 1019.0
margin_right = 651.2
margin_bottom = 1177.96
custom_fonts/font = SubResource( 4 )
align = 1
placeholder_alpha = 1.0

[node name="AddUser" type="HTTPRequest" parent="."]

[node name="Label" type="Label" parent="."]
anchor_right = 0.123
margin_left = 169.0
margin_top = 811.0
margin_right = 789.16
margin_bottom = 1021.0
custom_fonts/font = SubResource( 6 )
text = "Introduce tu usuario"
align = 1

[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="request_completed" from="AddUser" to="." method="_on_AddUser_request_completed"]
